fix: Now Search supports searching keywords in both title and body. feat: Adding a new post grants a credit of +5, while a comment earns +1. fix: Removed dropdown list on homepage. fix: Improved CSS of personal profiles. add: Bio field added to database. add: Bio can be modified in personal profile and updated in database.

--- a/app/templates/new-discussion.html
+++ b/app/templates/new-discussion.html
@@ -57,7 +57,7 @@
                                     },
                                     success: function (response) {
                                         if (response.code === 200) {
-                                            $('#resultMessage').html('<div class="alert alert-success" role="alert">Posted successfully!</div>');
+                                            $('#resultMessage').html('<div class="alert alert-success" role="alert">Posted successfully! Credit+5!</div>');
                                             // go to the discussion page
                                             setTimeout(function () {
                                                 window.location.href = '/post-details/' + response.post_id;
