--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -161,7 +161,7 @@
                                         },
                                         success: function (response) {
                                             if (response.code === 200) {
-                                                $('#resultMessage').html('<div class="alert alert-success" role="alert">Commented successfully!</div>');
+                                                $('#resultMessage').html('<div class="alert alert-success" role="alert">Commented successfully! Credit+1!</div>');
                                                 // go to the discussion page
                                                 setTimeout(function () {
                                                     window.location.href = url;
