style: add user bio in post-details and ranking page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
                 No discussions found.
             </h4>
             {% else %}
-            <ul class="discussion-list list-unstyled">
+            <ul class="discussion-list list-unstyled mt-4">
 
                 {% for post in paginate.items %}
                 <li>
