--- a/app/templates/ranking-page.html
+++ b/app/templates/ranking-page.html
@@ -38,6 +38,11 @@
                           </div>
                           <div class="col-md-9 column">
                               <h4>{{ user.username }}</h4>
+                              {% if user.bio %}
+                              <p class="text-muted">&nbsp;"{{ user.bio }}"</p>
+                              {% else %}
+                              <!-- <p class="text-muted">&nbsp;This user has not provided a bio yet...</p> -->
+                              {% endif %}
                               <ul class="list-inline">
                                 <li class="text-secondary list-inline-item text-center mt-2">
                                   <i class="bi bi-award"></i>
