--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -88,7 +88,11 @@
                         </div>
                         <div class="text-muted" style="text-align: right;">
                             <i class="bi bi-reply-fill"></i>
+                            {% if comment.timestamp %}
                             <span id="humanTimestamp_{{ comment.id }}"></span> replied
+                            {% else %}
+                            Replied
+                            {% endif %}
                         </div>
 
                         <script>
@@ -215,12 +219,8 @@
 
         {% endblock %}
         {% block script %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-        <script src="{{ url_for('static', filename='js/new-discussion.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/post-details.js') }}"></script>
         <script>
-            document.addEventListener('DOMContentLoaded', function() {
+            $(document).ready(function () {
                     var timestamp_{{ post.id }} = '{{ post.timestamp }}';
                     var momentTimestamp_{{ post.id }} = moment(timestamp_{{ post.id }});
                     var now = moment();
@@ -234,4 +234,8 @@
                     }
             });
         </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <script src="{{ url_for('static', filename='js/new-discussion.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/post-details.js') }}"></script>
         {% endblock %}
