feat: Add delete button to personal profile and comment sections

--- a/app/templates/personal-profile.html
+++ b/app/templates/personal-profile.html
@@ -225,6 +225,12 @@ Type: Integer
                                         </p>
                                     </div>
                                 </div>
+                                <div class="text-danger mt-5" style="text-align: right;">
+                                    <button class="btn deleteBtn">
+                                        <i class="bi bi-trash-fill"></i>
+                                        &nbsp;
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </li>
