--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -25,7 +25,6 @@
 
 <div class="container">
     <div class="row clearfix">
-
         <div class="col-md-9 column">
             <!-- post section -->
             <div class="row clearfix mt-5">
@@ -81,7 +80,7 @@
                             <span style="display: inline; color: brown;">&nbsp;<i class="bi bi-award-fill"></i>{{ comment.author.credit }}</span>
                             {% if comment.author == current_user %}
                             <div class="float-end text-danger" style="display: inline; text-align: right;">
-                                <button class="btn">
+                                <button class="btn" id="deleteCommentBtn" data-comment-id="{{ comment.id }}">
                                     <i class="bi bi-trash-fill"></i>
                                     &nbsp;
                                 </button>
@@ -176,6 +175,7 @@
                             <div class="form-group commentbtn">
                                 <button type="button" class="btn btn-secondary bg-gradient mb-2" id="commentBtn">Submit Comment</button>
                             </div>
+                            <div id="resultMessage" class="mt-4"></div>
                         </form>
 
                         <script>
@@ -242,6 +242,36 @@
                     } else {
                         element_{{ post.id }}.textContent = momentTimestamp_{{ post.id }}.format('YYYY-MM-DD HH:mm:ss');
                     }
+            });
+        </script>
+
+        <script>
+            // delete comment
+            $(document).ready(function () {
+                $('#deleteCommentBtn').click(function () {
+                    const comment_id = $(this).data('comment-id');
+                    const baseUrl = `${window.location.protocol}//${window.location.host}`;
+
+                    $.ajax({
+                        type: 'POST',
+                        url: `${baseUrl}/delete-comment/${comment_id}`,
+                        success: function (response) {
+                            if (response.code === 200) {
+                                $('#resultMessage').html('<div class="alert alert-success" role="alert">Comment deleted successfully!</div>');
+                                // go to the discussion page
+                                setTimeout(function () {
+                                    window.location.href = window.location.pathname;
+                                }, 1000);
+
+                            } else {
+                                $('#resultMessage').html('<div class="alert alert-danger" role="alert">Error: ' + response.message + '</div>');
+                            }
+                        },
+                        error: function () {
+                            $('#resultMessage').html('<div class="alert alert-danger" role="alert">An error occurred. Please try again later.</div>');
+                        }
+                    });
+                });
             });
         </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
