--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -67,7 +67,7 @@
                 <!-- comment -->
                 {% if comments %}
                 {% for comment in comments %}
-                <div class="row mt-3">
+                <div class="row mt-3" id={{comment.id}}>
                     <div class="col-md-1 offset-md-2">
                         <img alt="Avatar" src='https://robohash.org/{{ comment.author.email }}' class="rounded-circle" style="width: 50px; height: 50px; border: rgba(0, 0, 0, 0.2) 1.5px solid;" />
                     </div>
