--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}{% endblock %}
+    <title>{% block title %}Quoraii{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" />
@@ -72,7 +72,7 @@
                     <form id="loginForm">
                         <div class="mb-3">
                             <label for="InputUsername" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="InputUsername" name="username" aria-describedby="emailHelp" required>
+                            <input type="text" class="form-control" id="InputUsername_2" name="username" aria-describedby="emailHelp" required>
                         </div>
                         <div class="mb-3">
                             <label for="InputPassword1" class="form-label">Password</label>
