fix: fix the validator relevant bugs on index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,7 +54,7 @@
             <div class="homepage-results col-md-9 column">
                 
                 {% if paginate.total == 0 %}
-                <h4 class="text-center mt-4 text-secondary" role="alert">
+                <h4 class="text-center mt-4 text-secondary">
                     No discussions found.
                 </h4>
                 {% else %}
